# nixie-counter

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml
boards/default/: board.lp
circuit/: circuit.lp
firmware/: .embed.toml  .gitignore  .rustfmt.toml  Cargo.toml  Embed.toml  README.md  memory.x  openocd.gdb  rust-toolchain.toml
firmware/.cargo/: config  config.toml
firmware/.github/workflows/: rust_ci.yml
firmware/src/: command.rs  main.rs  nixie.rs  timer.rs  toggle_switch.rs
output/v1/: BOM.csv  Nixie_Counter_BOM.csv  nixie-counter-v1.lppz
output/v1.1/: BOM.csv  nixie-counter-v1.1.lppz
output/v1.1/gerber/: Nixie_Counter_COPPER-BOTTOM.gbr  Nixie_Counter_COPPER-TOP.gbr  Nixie_Counter_DRILLS-NPTH.drl  Nixie_Counter_DRILLS-PTH.drl  Nixie_Counter_OUTLINES.gbr  Nixie_Counter_SILKSCREEN-BOTTOM.gbr  Nixie_Counter_SILKSCREEN-TOP.gbr  Nixie_Counter_SOLDERMASK-BOTTOM.gbr  Nixie_Counter_SOLDERMASK-TOP.gbr  Nixie_Counter_SOLDERPASTE-BOTTOM.gbr  Nixie_Counter_SOLDERPASTE-TOP.gbr
output/v1/gerber/: Nixie_Counter_COPPER-BOTTOM.gbr  Nixie_Counter_COPPER-TOP.gbr  Nixie_Counter_DRILLS-NPTH.drl  Nixie_Counter_DRILLS-PTH.drl  Nixie_Counter_OUTLINES.gbr  Nixie_Counter_SILKSCREEN-BOTTOM.gbr  Nixie_Counter_SILKSCREEN-TOP.gbr  Nixie_Counter_SOLDERMASK-BOTTOM.gbr  Nixie_Counter_SOLDERMASK-TOP.gbr  Nixie_Counter_SOLDERPASTE-BOTTOM.gbr  Nixie_Counter_SOLDERPASTE-TOP.gbr
output/v2.0/: .librepcb-output  Nixie_Counter_v2.0.lppz  Nixie_Counter_v2.0.step
output/v2.0/assembly/: Nixie_Counter_v2.0_BOM_Std.csv  Nixie_Counter_v2.0_BOM_Std.html
output/v2.0/gerber/: Nixie_Counter_COPPER-BOTTOM.gbr  Nixie_Counter_COPPER-TOP.gbr  Nixie_Counter_DRILLS-NPTH.drl  Nixie_Counter_DRILLS-PTH.drl  Nixie_Counter_OUTLINES.gbr  Nixie_Counter_SILKSCREEN-BOTTOM.gbr  Nixie_Counter_SILKSCREEN-TOP.gbr  Nixie_Counter_SOLDERMASK-BOTTOM.gbr  Nixie_Counter_SOLDERMASK-TOP.gbr  Nixie_Counter_SOLDERPASTE-BOTTOM.gbr  Nixie_Counter_SOLDERPASTE-TOP.gbr
project/: jobs.lp  metadata.lp  settings.lp
schematics/main/: schematic.lp
