[package]
name = "firmware"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = { version = "1.0.93", default-features = false }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-12288"] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "dhcpv4-hostname",
    "medium-ethernet",
] }
embassy-time = "0.3.2"
embedded-hal = { version = "1" }
esp-alloc = { version = "0.5" }
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.5", features = [
    "esp32c3",
    "log",
    "integrated-timers",
] }
esp-println = { version = "0.12", features = ["esp32c3", "log", "colors"] }
esp-wifi = { version = "0.11", features = ["esp32c3", "log", "wifi", "utils"] }
futures-util = { version = "0.3", default-features = false }
heapless = "0.8"
log = { version = "0.4", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
    "proto-ipv4",
    "proto-ipv6",
    "socket-dhcpv4",
] }
static_cell = "2"
